# dawn-binaries

./: .gitignore  CMakeLists.txt  glfw3webgpu.cpp  glfw3webgpu.h  main.cpp
.github/workflows/: build.yml
DawnLoader/: CMakeLists.txt  dawn_loader.cxx
DawnLoader/CMake/: GetLinkedLibs.cmake  download_depot_tools.cmake
weld/: CMakeLists.txt
weld/CMake/: GenerateWeldSource.cmake  WeldSymbols.cmake  weld.cxx.in  weld.h.in  weldConfig.cmake.in
